Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for sg3_utils-1.45 [20200202] [svn: r840]
  - sg_get_elem_status: new utility [sbc4r16]
  - sg_ses: bug: --page= being overridden when --control
    and --data= also given; fix
    - document explicit Element type codes and example
    - rename 'SAS SlimLine' to SlimSAS [ses4r02]
    - add --inhex=FN, equivalent to --data=@FN, for
      compatibility with other utilities
  - sg_opcodes: expand MLU (now 2 bits, spc5r20)
    - include RWCDLP field as extension of CDLP
      field (spc5r01)
  - sg_write_buffer: allow comma and period separated
    lists when input from stdin
  - sg_inq: update version descriptors to spc5r21
    - add some NVMe 1.4 snippets to ctl identify
  - sg_format: add --dcrt used twice (FOV=1 DCRT=0)
    - add support for FORMAT WITH PRESET (sbc4r18)
  - sg_raw: fix --send bug when using stdin
  - sg_vpd: 3pc VPD page add copy group descriptor
    - add --examine option
    - new zoned block device char. field (zbc2r04)
  - sg_read_buffer: decode read microcode status page
    - add --inhex=FN option
  - sg_request: add --error option, replaces opcode
    with 0xff (or skips call to pass-through)
  - sg_get_lba_status: add --inhex=FN option
  - sg_xcopy: add --fco (fast copy only) (spc5r20)
    - implement --app=1 (append) on regular OFILE type
  - sg_scan (win32): expand limits for big arrays
  - sg_modes: placeholders for Command duration limit
    T2A and T2B mpages (sbc4r17)
    - improve zbc support (e.g. caching mpage)
  - sg_logs: add Command duration limits statistics
    lpage (spc6r01)
    - zoned block device statistics log page: shorten
      counter fields from 8 to 4 bytes (zbc2r02)
      - new field in this log page (zbc2r04)
    - change '-ll' option to suppress subpages=0xff