@@ -1,4 +1,4 @@
-.TH SG_SES "8" "August 2019" "sg3_utils\-1.45" SG3_UTILS
+.TH SG_SES "8" "February 2020" "sg3_utils\-1.45" SG3_UTILS
 .SH NAME
 sg_ses \- access a SCSI Enclosure Services (SES) device
 .SH SYNOPSIS
@@ -759,7 +759,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2004\-2019 Douglas Gilbert
+Copyright \(co 2004\-2020 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
