@@ -2,7 +2,7 @@ sg3-utils (1.45-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sun, 02 Feb 2020 21:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 10 Feb 2020 23:00:00 -0500
 
 sg3-utils (1.44-0.1) unstable; urgency=low
 
